= Changelog

* Frontend
  ** Add new page to edit roles.
* API
  ** Add `/role/create` route.
* Database
  ** Add new permission `role_edit`.
     Given to everyone who also has the `space_edit` permission.

== `0.5.0.0`

* API
  ** Add `/desk/delete` route.
* Database
  ** Give `space_edit` permission to everyone with `desk_edit` permission.
* Frontend
  ** It's now possible to cancel reservations.

== `0.4.0.0`

* Database
  ** Make sure that all space owners are admins if possible.

== `0.3.1.0`

* API
  ** Add `/space/edit` route.
* Frontend
  ** Add a new page to edit space settings.

== `0.3.0.0`

* API
  ** Remove `password` field from the request of the `/space/create` route.
  ** Add new HTTP error codes to `/desk/create` route.
* Database
  ** Move column `password_hash` from table `space` to `space_role`.
* Frontend
  ** Add a new page to view existing reservations.
  ** Add a primitive indicator to visualize reserved time periods.

== `0.2.0.0`

* Update all dependencies.
* API
  ** Add owner information to the response of the `/space/view` route.

== `0.1.0.0`

* API
  ** Add `/space/leave` route.
  ** Add optional `password` to request body route of `/space/create`.
  ** Add `owner` field to spaces when serialized to/from JSON affecting a few routes.
    *** `/space/list`
    *** `/reservation/list`
* Frontend
  ** Add a new button leave a space when you already are a member.
  ** Allow optionally setting a password to join a space.
* Database
  ** Add new column `password_hash` to the `space` table.
  ** Add new column `owner` to the `space` table.
    *** This migration has to touch a lot of data.
        Spaces that don't have any members will be purged during this migration.
        All other spaces will have their oldest member as the new owner.

== `0.0.3.0`

* API
  ** Add `/reservation/list` route.
  ** Add `timezone` field to spaces when serialized to/from JSON affecting a few routes.
    *** `/space/list`
    *** `/reservation/list`